[gd_scene load_steps=3 format=3 uid="uid://5ikblwgd2qmc"]

[ext_resource type="PackedScene" uid="uid://duhev2d03crw3" path="res://src/schedule_screen/schedule_screen.tscn" id="1_aiul1"]
[ext_resource type="Script" path="res://src/schedule_comparer/schedule_comparer.gd" id="2_fxjoe"]

[node name="ScheduleComparer" instance=ExtResource("1_aiul1")]
script = ExtResource("2_fxjoe")

[node name="ImportButton" type="Button" parent="ScrollContainer/ButtonContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
text = "Import
"

[node name="ImportPopup" type="ConfirmationDialog" parent="." index="2"]
unique_name_in_owner = true
title = "Import Schedule"
size = Vector2i(320, 240)
ok_button_text = "Import"

[node name="ImportText" type="TextEdit" parent="ImportPopup" index="3"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 151.0
placeholder_text = "000000000000 000000000000 000000000000 000000000000 000000000000 000000000000 000000000000"
wrap_mode = 1

[node name="ErrorDialog" type="AcceptDialog" parent="." index="3"]
unique_name_in_owner = true
title = "Invalid Schedule"
size = Vector2i(877, 100)
dialog_text = "Importer expects a schedule to be 7 space-separated sets of 12 characters, with each character being 0-9 or A-F."

[connection signal="pressed" from="ScrollContainer/ButtonContainer/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="confirmed" from="ImportPopup" to="." method="_on_import_popup_confirmed"]
